------------------------------------------------------------------------ r53030 | nuno@ufp.edu.pt | 2008-09-12 12:00:24 +0100 (Fri, 12 Sep 2008) | 1 line
NFS-39: Fix major bugs reports in Code Review, FindBugs and PMD; added FindBugs and PMD natures to eclipse project
------------------------------------------------------------------------


git-svn-id: https://source.sakaiproject.org/contrib/ufp/newsfeeds/branches/2.5.x@53031 fdecad78-55fc-0310-b1b2-d7d25cf747c9